[package]
name = "repo-activity-summary"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
async-trait = "0.1.61"
chrono = "0.4.23"
clap = { version = "4.1.1", features = ["derive"] }
dateparser = { git = "https://github.com/kkysen/dateparser.git", version = "0.1.7" }
dirs = "4.0.0"
fs-err = "2.9.0"
futures = "0.3.25"
humantime = "2.1.0"
octocrab = "0.18.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.17"
tokio = { version = "1.24.2", features = ["macros"] }
url = "2.3.0"
